[metadata]
name = pyplan
version = 0.1.0
author = Timothy Danford
author_email = tdanford@gmail.com
url = something
description = Tools for creating and manipulating human-evaluable plans
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
install_requires = 
    rich 